removed side menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<li class="error3"></li>
 			</ul>
 		</section>
-		<section class="append">
+		<section class="shoplist">
 			<ul>
 				
 			</ul>
