--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Captain America's Shopping Cart</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/main.css">
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
+	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
+	<script src="js/jquery-ui.js" type="text/javascript"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
@@ -18,11 +20,11 @@
 	<section class="wrapper">
 		<section class="tableheader">
 		    <ul>
-		        <li class="item1">Remove</li>
-		        <li class="item2">Product Description</li>
-		        <li class="item3">Unit Price</li>
-		        <li class="item4">Quantity</li>
-		        <li class="item5">Total Price</li>
+		        <li>Remove</li>
+		        <li>Product Description</li>
+		        <li>Unit Price</li>
+		        <li>Quantity</li>
+		        <li>Total Price</li>
 		    </ul>
 		</section>
 		<section class="tablecontent">
@@ -31,7 +33,6 @@
 				<li><input class="productdescrip" type="text" placeholder="Enter Item Here"></li>
 				<li><input class="price" type="text" placeholder="Price"></li>
 				<li><input class="quantity" type="text" placeholder="Quantity" ></li>
-				<!--<li><input class="total" type="text" placeholder ="Total"></li>-->
 			</ul>
 		</section>
 		<section class="tablerrors">
@@ -43,7 +44,6 @@
 		</section>
 		<section class="shoplist">
 			<ul>
-				
 			</ul>
 		</section>
 	</section>	
